--- a/src/css/style.css
+++ b/src/css/style.css
@@ -556,3 +556,36 @@
 }
 
 /* END CLIENT */
+
+/* RENTAL */
+
+.radio-input {
+    appearance: none;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    transition: background 0.2s, border-color 0.2s;
+}
+
+.radio-input:checked::before {
+    content: "";
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.radio-input:hover {
+    border-color: #000000;
+}
+/* END RENTAL */
